--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,14 +1,20 @@
 .programs {
+  width: 320px;
+  box-sizing: border-box;
   padding: @mobile-padding;
-  margin: 0;
+  margin: 0 auto;
   margin-top: 22px;
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
+    width: 768px;
     padding: @tablet-padding;
     margin-top: 0;
   }
 
   @media (min-width: @desktop-width) {
+    width: 1440px;
     padding: @desktop-padding;
     margin-top: 82px;
   }
