--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,18 +4,19 @@
 }
 
 .page-footer__wrapper {
-  width: 280px;
+  // width: 320x;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: @basic_grey;
   margin: 0 auto;
+  padding: @mobile-padding;
+  // border
   outline: 2px solid @status_error;
   outline-offset: -2px;
-  padding: @mobile-padding;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    // width: 708px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     min-height: 150px;
@@ -23,7 +24,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
+    width: @desktop-width;
     padding: @desktop-padding;
   }
 }
