--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,6 @@
 .page-header {
-  width: 320px;
+  // width: 320px;
+  width: 100%;
   min-height: 65px;
   box-sizing: border-box;
   margin: 0 auto;
@@ -7,7 +8,7 @@
   outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
+    // width: 768px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,7 +18,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1440px;
+    width: @desktop-width;
     min-height: 109px;
     padding: @desktop-padding;
     padding-top: 53px;
