--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -6,28 +6,32 @@
 .contacts__wrapper {
   display: flex;
   justify-content: space-between;
-  width: 320px;
+  align-items: center;
   box-sizing: border-box;
+  min-height: 115px;
   padding: @mobile-padding;
   margin: 28px auto 26px auto;
   outline: 2px solid @status_error;
   outline-offset: -2px;
+  gap: 2px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
+    gap: 295px;
+    // width: 768px;
     padding: 0 70px;
+    min-height: 200px;
   }
 
   @media (min-width: @desktop-width) {
+    gap: 87px;
     width: 570px;
-    min-height: 200px;
     position: absolute;
     top: 95px;
-    left: 110px;
-    box-sizing: border-box;
+    left: 50%;
     background-color: @basic_white;
     padding: 62px 89px 15px 76px;
     margin: 0;
+    margin-left: -550px;
   }
 }
 
@@ -36,12 +40,12 @@
   line-height: 20px;
   text-transform: uppercase;
   margin: 0;
-  max-width: 140px;
+  min-width: 135px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 21px;
-    max-width: 165px;
+    min-width: 165px;
   }
 }
 
@@ -51,10 +55,10 @@
   line-height: 20px;
   color: @special_dark-grey;
   margin: 0;
-  max-width: 140px;
+  min-width: 140px;
 
   @media (min-width: @tablet-width) {
-    max-width: 165px;
+    min-width: 165px;
     font-size: 16px;
     line-height: 20px;
     text-align: end;
