--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -10,7 +10,7 @@
 .copyright__link {
   display: flex;
   justify-content: space-between;
-  align-self: center;
+  align-items: center;
   text-decoration: none;
 
   @media (min-width: @tablet-width) {
@@ -24,5 +24,5 @@
   font-size: 16px;
   line-height: 18px;
   color: @special_dark-grey;
-  margin: auto 0;
+  margin: 0;
 }
