--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,20 +1,20 @@
 .programs {
-  width: 320px;
   box-sizing: border-box;
   padding: @mobile-padding;
   margin: 0 auto;
   margin-top: 22px;
+  // border
   outline: 2px solid @status_error;
   outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
+    width: @tablet-width;
     padding: @tablet-padding;
     margin-top: 0;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1440px;
+    width: @desktop-width;
     padding: @desktop-padding;
     margin-top: 82px;
   }
@@ -54,18 +54,18 @@
 }
 
 .programs__item {
+  width: 100%;
   padding: @mobile-padding;
   padding-top: 24px;
   min-height: 266px;
   box-sizing: border-box;
   background-color: @basic_grey;
-  width: 280px;
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     box-sizing: border-box;
-    width: 708px;
     padding: 77px 62px 53px 52px;
+    // padding: 0;
     position: relative;
   }
 
