Адаптивная сетка для главной страницы(на 1 проверку)

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -10,14 +10,13 @@
   box-sizing: border-box;
   min-height: 115px;
   padding: @mobile-padding;
-  margin: 28px auto 26px auto;
+  margin: 0 auto 0 auto;
   outline: 2px solid @status_error;
   outline-offset: -2px;
   gap: 2px;
 
   @media (min-width: @tablet-width) {
     gap: 295px;
-    // width: 768px;
     padding: 0 70px;
     min-height: 200px;
   }
