--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,13 +1,11 @@
 .information {
   padding: @mobile-padding;
-  // width: 280px;
   box-sizing: border-box;
   margin: 0 auto;
   outline: 2px solid @status_error;
   outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
-    width: @tablet-width;
     padding: @tablet-padding;
   }
 
@@ -78,7 +76,7 @@
     display: block;
     position: absolute;
     top: -30px;
-    right: 112px;
+    left: 112px;
     font-size: 280px;
     line-height: 280px;
     color: @basic_grey;
