Адаптивная сетка для главной страницы(на 2 проверку)

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -21,7 +21,7 @@
     min-height: 200px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     gap: 87px;
     width: 570px;
     position: absolute;
@@ -63,7 +63,7 @@
     text-align: end;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     text-align: start;
   }
 }
