--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -15,7 +15,7 @@
     width: 440px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: 478px;
   }
 }
