--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -1,11 +1,11 @@
 // padding
 @mobile-padding: 0 20px;
 @tablet-padding: 0 30px;
-@desktop-padding: 0 110px;
 // width
 @tablet-width: 768px;
 @mobile-width-only: 767px;
-@desktop-width: 1440px;
+@desktop-width: 1220px;
+@desktop-breakpoint-width: 1280px;
 // colors
 @basic_white: #FFFFFF;
 @basic_black: #000000;
