--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -5,7 +5,6 @@
 
 .example__wrapper {
   padding-top: 27px;
-  box-sizing: border-box;
   margin: 0 auto;
   outline: 2px solid @status_error;
   outline-offset: -2px;
@@ -14,11 +13,12 @@
     padding: @tablet-padding;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: @desktop-width;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: @desktop-padding;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -56,7 +56,7 @@
     margin-top: 61px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     margin-top: 146px;
   }
 }
@@ -68,7 +68,7 @@
     justify-content: center;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     display: block;
   }
 }
