--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,7 +4,6 @@
 }
 
 .page-footer__wrapper {
-  box-sizing: border-box;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -21,9 +20,10 @@
     padding: @tablet-padding;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: @desktop-width;
-    padding: @desktop-padding;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
