--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,5 +1,4 @@
 .programs {
-  box-sizing: border-box;
   padding: @mobile-padding;
   margin: 0 auto;
   margin-top: 22px;
@@ -12,10 +11,11 @@
     margin-top: 0;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: @desktop-width;
-    padding: @desktop-padding;
     margin-top: 82px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -27,7 +27,7 @@
     display: block;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     display: flex;
     align-items: center;
     gap: 62px;
@@ -46,7 +46,7 @@
     gap: 30px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     flex-direction: row;
     gap: 80px;
   }
@@ -56,7 +56,8 @@
   width: 100%;
   padding: @mobile-padding;
   padding-top: 24px;
-  min-height: 266px;
+  padding-bottom: 22px;
+  // min-height: 266px;
   box-sizing: border-box;
   background-color: @basic_grey;
   margin: 0 auto;
@@ -67,7 +68,7 @@
     position: relative;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: 570px;
     padding: 47px 51px 55px 52px;
   }
@@ -90,7 +91,7 @@
     height: 200px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     position: static;
     width: 100px;
     height: 100px;
@@ -109,7 +110,7 @@
       height: 194px;
     }
 
-    @media (min-width: @desktop-width) {
+    @media (min-width: @desktop-breakpoint-width) {
       width: 70px;
       height: 97px;
     }
@@ -124,7 +125,7 @@
       height: 112px;
     }
 
-    @media (min-width: @desktop-width) {
+    @media (min-width: @desktop-breakpoint-width) {
       width: 134px;
       height: 56px;
     }
@@ -161,7 +162,7 @@
     border: none;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: auto;
     margin-top: 39px;
   }
@@ -175,7 +176,7 @@
   text-decoration: none;
   color: @basic_black;
   padding-top: 15px;
-  padding-bottom: 18px;
+  // padding-bottom: 18px;
   margin: 0;
 
   @media (min-width: @tablet-width) {
@@ -185,7 +186,7 @@
     margin-top: 52px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     margin-top: 27px;
   }
 }
