catalog(product card, card)

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,6 +1,15 @@
 .contacts {
   position: relative;
   margin: 0;
+  margin-top: 35px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 76px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+  }
 }
 
 .contacts__wrapper {
