--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -6,6 +6,12 @@
   margin: 0;
   padding-top: 13px;
   padding-bottom: 19px;
+
+  @media (min-width: @tablet-width) {
+    padding: 27px 38px;
+    border: 1px solid @special_grey;
+    box-sizing: border-box;
+  }
 }
 
 .card__title {
@@ -14,12 +20,22 @@
   line-height: 16px;
   text-transform: uppercase;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .card__text {
   display: flex;
   justify-content: space-between;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .card__text-name {
@@ -34,4 +50,8 @@
   font-size: 14px;
   line-height: 14px;
   margin: 0;
+}
+
+.card__button {
+  width: 100%;
 }
