--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -10,4 +10,11 @@
   border-bottom: 1px solid @special_grey-4;
   margin: 0;
   padding: 25px 0 36px 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding: 68px 0 80px 0;
+    border: none;
+  }
 }
