--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,6 +15,7 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/catalog.less";
 @import "blocks/product-card.less";
 @import "blocks/catalog-further.less";
 @import "blocks/card.less";
