--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,12 +1,12 @@
 .page-header {
   width: 100%;
+  box-sizing: border-box;
   min-height: 65px;
   margin: 0 auto;
   outline: 2px solid @status_error;
   outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
-    width: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
