--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,10 +1,10 @@
 .present {
   margin: 0;
   margin-top: 36px;
-  padding: @mobile-padding;
+  // padding: @mobile-padding;
 
   @media (min-width: @tablet-width) {
-    padding: @tablet-padding;
+    // padding: @tablet-padding;
     margin-top: 69px;
   }
 
