--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -2,6 +2,7 @@
   display: grid;
   gap: 14px;
   min-height: 117px;
+  box-sizing: border-box;
   border-bottom: 1px solid @special_grey-5;
   margin: 0;
   padding-top: 13px;
@@ -11,6 +12,16 @@
     padding: 27px 38px;
     border: 1px solid @special_grey;
     box-sizing: border-box;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 72px;
+    grid-template-columns: 325px 326px 245px;
+    gap: 0;
+    border: none;
+    border-bottom: 1px solid @special_grey-5;
+    padding: 0;
+    align-items: center;
   }
 }
 
@@ -36,6 +47,11 @@
     font-size: 16px;
     line-height: 20px;
   }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 244px 82px;
+  }
 }
 
 .card__text-name {
@@ -54,4 +70,10 @@
 
 .card__button {
   width: 100%;
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    height: 40px;
+    box-sizing: border-box;
+  }
 }
