--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -1,12 +1,32 @@
 .catalog-further {
+  margin: 0 auto;
   padding: @mobile-padding;
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
+
+  @media (min-width: @tablet-width) {
+    padding: @tablet-padding;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+    padding: 0;
+  }
+}
+
+.catalog-further__wrapper {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+  }
 }
 
 .catalog-further__title {
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  text-align: center;
+  text-align: left;
   border-bottom: 1px solid @special_grey-4;
   margin: 0;
   padding: 25px 0 36px 0;
@@ -16,5 +36,14 @@
     line-height: 36px;
     padding: 68px 0 80px 0;
     border: none;
+  }
+}
+
+.catalog-further__list {
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
+
+  @media (min-width: @desktop-width) {
+    width: 896px;
   }
 }
