--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,12 +1,15 @@
 .catalog {
   margin: 0 auto;
   padding: @mobile-padding;
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
     padding: @tablet-padding;
+    margin-top: 82px;
   }
 
   @media (min-width: @desktop-width) {
