--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -2,13 +2,15 @@
   position: relative;
   margin: 0;
   margin-top: 35px;
+  background-color: @basic_grey;
 
   @media (min-width: @tablet-width) {
     margin-top: 76px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0;
+    margin-top: 85px;
+    background-color: transparent;
   }
 }
 
@@ -37,7 +39,7 @@
     top: 95px;
     left: 50%;
     background-color: @basic_white;
-    padding: 62px 89px 15px 76px;
+    padding: 62px 89px 51px 76px;
     margin: 0;
     margin-left: -550px;
   }
