--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,9 +8,19 @@
   text-transform: uppercase;
   margin: 0;
 
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
   &--hint {
     padding: @mobile-padding;
     margin-bottom: 39px;
+
+    @media (min-width: @tablet-width) {
+      margin-top: 54px;
+      padding: @tablet-form-padding;
+    }
   }
 
   &--footnote {
@@ -19,6 +29,11 @@
     text-transform: none;
     text-align: center;
     margin-top: 21px;
+
+    @media (min-width: @tablet-width) {
+      font-size: 16px;
+      text-align: start;
+    }
   }
 }
 
@@ -27,21 +42,44 @@
   margin-bottom: 26px;
   padding: @mobile-padding;
   list-style: none;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    padding: @tablet-form-padding;
+  }
 
   &--radio {
     box-sizing: border-box;
     border-top: 1px solid @special_grey-6;
     border-bottom: 1px solid @special_grey-6;
     padding: 22px 20px 20px 20px;
+
+    @media (min-width: @tablet-width) {
+      margin: @tablet-form-padding;
+      margin-bottom: 65px;
+      border: 1px solid @special_grey-7;
+    }
   }
 
   &--contacts {
     margin-top: 35px;
+
+    @media (min-width: @tablet-width) {
+      margin-top: 76px;
+    }
   }
 
   &--optional {
     margin-top: 34px;
     margin-bottom: 34px;
+
+    @media (min-width: @tablet-width) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      row-gap: 32px;
+      margin-top: 57px;
+      margin-bottom: 54px;
+    }
   }
 }
 
@@ -49,6 +87,16 @@
   display: flex;
   align-items: baseline;
   margin-top: 13px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 20px;
+  }
+
+  &--optional {
+    @media (min-width: @tablet-width) {
+      margin: 0;
+    }
+  }
 
   &:first-child {
     margin-top: 0;
@@ -85,6 +133,10 @@
   text-transform: uppercase;
   padding: 13px 12px 13px 15px;
 
+  @media (min-width: @tablet-width) {
+    padding: 10px 20px;
+  }
+
   &--textarea {
     height: 150px;
     resize: none;
@@ -97,9 +149,40 @@
   line-height: 26px;
   margin: 0;
   padding-left: 20px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding: @tablet-form-padding;
+  }
+
+  & br {
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
 }
 
 .form__message {
   margin: 37px 0 23px 0;
   padding: @mobile-padding;
+
+  @media (min-width: @tablet-width) {
+    margin: 76px 0 65px 0;
+    padding: @tablet-form-padding;
+  }
+}
+
+.form__button {
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
+}
+
+.form__button-wrapper {
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: @tablet-form-padding;
+  }
 }
