--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -1,6 +1,7 @@
 // padding
 @mobile-padding: 0 20px;
 @tablet-padding: 0 30px;
+@tablet-form-padding: 0 67px 0 70px;
 // width
 @tablet-width: 768px;
 @mobile-width-only: 767px;
