Адаптивная сетка внутренних страниц (на проверку)

--- a/source/less/blocks/catalog-further.less
+++ b/source/less/blocks/catalog-further.less
@@ -8,14 +8,14 @@
     padding: @tablet-padding;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: @desktop-width;
     padding: 0;
   }
 }
 
 .catalog-further__wrapper {
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     display: flex;
     justify-content: space-between;
     padding: 0;
@@ -43,7 +43,7 @@
   outline: 2px solid @status_error;
   outline-offset: -2px;
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: 896px;
   }
 }
