--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -8,7 +8,7 @@
     margin-top: 76px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     margin-top: 85px;
     background-color: transparent;
   }
