--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -14,7 +14,7 @@
     box-sizing: border-box;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     min-height: 72px;
     grid-template-columns: 325px 326px 245px;
     gap: 0;
@@ -48,7 +48,7 @@
     line-height: 20px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     display: grid;
     grid-template-columns: 244px 82px;
   }
@@ -71,7 +71,7 @@
 .card__button {
   width: 100%;
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: 245px;
     height: 40px;
     box-sizing: border-box;
