--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -12,7 +12,7 @@
     margin-top: 82px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: @desktop-width;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
