--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,12 +1,14 @@
 .form {
   margin: 0;
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
 }
 
 .form__text {
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -21,6 +23,11 @@
       margin-top: 54px;
       padding: @tablet-form-padding;
     }
+
+    @media (min-width: @desktop-breakpoint-width) {
+      width: @desktop-width;
+      padding: 0;
+    }
   }
 
   &--footnote {
@@ -31,6 +38,7 @@
     margin-top: 21px;
 
     @media (min-width: @tablet-width) {
+      margin: auto 0;
       font-size: 16px;
       text-align: start;
     }
@@ -38,18 +46,30 @@
 }
 
 .form__list {
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 26px;
   padding: @mobile-padding;
   list-style: none;
   box-sizing: border-box;
+  outline: 2px solid @status_error;
+  outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
     padding: @tablet-form-padding;
   }
 
+  @media (min-width: @desktop-breakpoint-width) {
+    padding: 0;
+    margin-bottom: 65px;
+  }
+
+  &--questionnaire {
+    @media (min-width: @desktop-breakpoint-width) {
+      margin: 0;
+    }
+  }
+
   &--radio {
-    box-sizing: border-box;
     border-top: 1px solid @special_grey-6;
     border-bottom: 1px solid @special_grey-6;
     padding: 22px 20px 20px 20px;
@@ -59,6 +79,10 @@
       margin-bottom: 65px;
       border: 1px solid @special_grey-7;
     }
+
+    @media (min-width: @desktop-breakpoint-width) {
+      margin: 0;
+    }
   }
 
   &--contacts {
@@ -66,6 +90,14 @@
 
     @media (min-width: @tablet-width) {
       margin-top: 76px;
+    }
+
+    @media (min-width: @desktop-breakpoint-width) {
+      width: @desktop-width;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 80px;
+      align-items: baseline;
     }
   }
 
@@ -75,10 +107,17 @@
 
     @media (min-width: @tablet-width) {
       display: grid;
+      gap: 60px;
       grid-template-columns: 1fr 1fr;
       row-gap: 32px;
       margin-top: 57px;
       margin-bottom: 54px;
+    }
+
+    @media (min-width: @desktop-breakpoint-width) {
+      width: @desktop-width;
+      gap: 80px;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
 }
@@ -100,6 +139,19 @@
 
   &:first-child {
     margin-top: 0;
+  }
+}
+
+.form__questionnaire-wrapper {
+  @media (min-width: @desktop-breakpoint-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    width: @desktop-width;
+    margin: 0 auto;
+    margin-bottom: 65px;
+    outline: 2px solid @status_error;
+    outline-offset: -2px;
   }
 }
 
@@ -147,13 +199,18 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
-  margin: 0;
+  margin: 0 auto;
   padding-left: 20px;
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
     line-height: 36px;
     padding: @tablet-form-padding;
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    width: @desktop-width;
+    padding: 0;
   }
 
   & br {
@@ -164,17 +221,23 @@
 }
 
 .form__message {
-  margin: 37px 0 23px 0;
+  margin: 37px auto 23px auto;
   padding: @mobile-padding;
 
   @media (min-width: @tablet-width) {
-    margin: 76px 0 65px 0;
+    margin: 76px auto 65px auto;
     padding: @tablet-form-padding;
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    width: @desktop-width;
+    padding: 0;
   }
 }
 
 .form__button {
   @media (min-width: @tablet-width) {
+    width: 100%;
     margin: 0;
   }
 }
@@ -183,6 +246,14 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 60px;
     padding: @tablet-form-padding;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    width: @desktop-width;
+    gap: 80px;
+    padding: 0;
   }
 }
