--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -6,7 +6,6 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  // text-align: left;
   border-top: 1px solid @special_grey-4;
   border-bottom: 1px solid @special_grey-4;
   margin: 0 auto;
@@ -22,7 +21,7 @@
     margin: 65px auto 0 auto;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: @desktop-width;
     padding: 0;
     margin-top: 74px;
@@ -35,6 +34,11 @@
 
     @media (min-width: @tablet-width) {
       padding: @tablet-form-padding;
+    }
+
+    @media (min-width: @desktop-breakpoint-width) {
+      width: @desktop-width;
+      padding: 0;
     }
   }
 }
