--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -8,7 +8,7 @@
     margin-top: 69px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     padding: 0;
     margin-top: 0;
   }
@@ -27,7 +27,7 @@
     margin: 0 auto;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: 245px;
     box-sizing: border-box;
     display: block;
@@ -44,7 +44,7 @@
     margin: 0;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     margin: 0 auto;
   }
 }
@@ -63,7 +63,7 @@
     margin: 0;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     text-align: center;
     margin: 46px auto 0 auto;
   }
