--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -70,7 +70,7 @@
     margin-top: 34px;
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-breakpoint-width) {
     width: 145px;
     line-height: 21px;
   }
