--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -3,6 +3,7 @@
   padding: 20px 0 20px 0;
 
   @media (min-width: @tablet-width) {
+    width: auto;
     padding: 0;
   }
 }
@@ -16,6 +17,16 @@
   @media (min-width: @tablet-width) {
     justify-content: flex-end;
     gap: 22px;
+  }
+
+  @media (min-width: @desktop-width) {
+    &:hover path {
+      fill: @basic_green;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
 
