--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,14 @@
 .social {
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+  }
 }
 
 .social__list {
   display: flex;
   justify-content: center;
-  gap: 34px;
   list-style: none;
   box-sizing: border-box;
   border-bottom: 1px solid @special_grey-6;
@@ -16,5 +19,19 @@
   @media (min-width: @tablet-width) {
     border: none;
     padding: 0;
+  }
+}
+
+.social__item svg {
+  padding: 17px;
+
+  @media (min-width: @desktop-width) {
+    &:hover path {
+      fill: @basic_green;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
