--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -178,6 +178,7 @@
   padding-top: 15px;
   margin: 0;
   position: relative;
+  cursor: pointer;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -201,7 +202,7 @@
     margin-top: -6px;
     top: 50%;
     width: 24px;
-    height: 10px;
+    height: 12px;
     background-image: url("../../img/programs/icon_programs_arrow.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
