--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -13,6 +13,7 @@
   margin: 0 auto;
   padding: 10px 0 10px 0;
   border: none;
+  cursor: pointer;
 
   @media (min-width: @desktop-breakpoint-width) {
     &:hover {
