--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -128,6 +128,7 @@
   text-align: center;
   margin: 0;
   margin-top: 27px;
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -142,6 +143,14 @@
 
 .example__slide--after {
   display: none;
+}
+
+.example__slide--before {
+  display: none;
+}
+
+.example__slide--active {
+  display: block;
 }
 
 .example__slider-buttons {
@@ -195,6 +204,8 @@
   line-height: 20px;
   background-color: transparent;
   border: none;
+  text-transform: uppercase;
+  cursor: pointer;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
