--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -64,7 +64,7 @@
   @media (min-width: @tablet-width) {
     font-size: 18px;
     line-height: 24px;
-    font-weight: 400px;
+    font-weight: 400;
     padding: 0;
 
     &:hover:not(.main-nav__link--active) {
@@ -90,5 +90,11 @@
     @media (min-width: @desktop-breakpoint-width) {
       background-color: @basic_white;
     }
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    color: @basic_white;
+    font-size: 20px;
+    line-height: 30px;
   }
 }
