--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,16 +1,22 @@
 .example {
   background-color: @special_grey-5;
   margin: 0;
+  margin-top: 42px;
+
+  @media (min-width: @tablet-width) {
+    background-color: transparent;
+    background-image: linear-gradient(to top, @special_grey-5 0, @special_grey-5 462px, transparent 462px, transparent 100%);
+  }
 }
 
 .example__wrapper {
   padding-top: 27px;
+  padding-bottom: 30px;
   margin: 0 auto;
-  outline: 2px solid @status_error;
-  outline-offset: -2px;
 
   @media (min-width: @tablet-width) {
     padding: @tablet-padding;
+    padding-bottom: 70px;
   }
 
   @media (min-width: @desktop-breakpoint-width) {
@@ -83,7 +89,13 @@
   margin-top: 25px;
 
   @media (min-width: @tablet-width) {
+    justify-content: flex-start;
     gap: 42px;
+    margin-top: 54px;
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    margin-top: 69px;
   }
 }
 
@@ -91,6 +103,10 @@
   width: 124px;
   text-align: center;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 162px;
+  }
 }
 
 .example__specification-value {
@@ -133,12 +149,23 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
+    text-align: end;
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    margin-top: 50px;
+    text-align: start;
   }
 }
 
 .example__slider {
   margin: 0;
   margin-top: 42px;
+
+  @media (min-width: @desktop-breakpoint-width) {
+    margin-bottom: 0;
+    margin-top: auto;
+  }
 }
 
 .example__slide--after {
@@ -156,10 +183,9 @@
 .example__slider-buttons {
   width: min-content;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: center;
-  gap: 2px;
-  padding-bottom: 25px;
+  gap: 20px;
   margin: 0 auto;
   margin-top: 23px;
 }
@@ -173,6 +199,10 @@
   background-color: @basic_white;
   margin: 0;
   padding: 3px 6px 3px 6px;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .example__slider-handle {
@@ -198,17 +228,80 @@
 }
 
 .example__slider-button {
-  width: 70px;
-  height: 40px;
   font-size: 16px;
   line-height: 20px;
   background-color: transparent;
   border: none;
   text-transform: uppercase;
   cursor: pointer;
+  padding: 0;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    border-bottom: 1px dotted @special_grey-8;
+  }
+
+  @media (min-width: @desktop-breakpoint-width) {
+    &:hover {
+      border-bottom: 1px solid fade(@special_grey-8, 30%);
+    }
+
+    &:active {
+      border-bottom-color: transparent;
+    }
+  }
+}
+
+.example__range {
+  width: 428px;
+  position: relative;
+  height: 6px;
+  box-sizing: border-box;
+
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+}
+
+.example__range-scale {
+  height: 6px;
+  background: @special_grey;
+  border-radius: 6px;
+}
+
+.example__range-toggle {
+  width: 8px;
+  height: 8px;
+  background-color: @basic_green;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.example__range-toggle-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -17px;
+  left: 50%;
+  margin-left: -17px;
+  width: 34px;
+  height: 34px;
+  box-sizing: border-box;
+  background: @basic_white;
+  border-radius: 50%;
+  border: 1px solid @basic_grey;
+  filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.16));
+
+  @media (min-width: @desktop-breakpoint-width) {
+    &:hover {
+      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.19));
+    }
+
+    &:active {
+      filter: drop-shadow(0 3px 5px rgba(0, 0, 0, 0.2));
+      border: 1px solid @basic_green;
+    }
   }
 }
